; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_following_set.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_following_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32**, i32**)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unit_following_set(i32** %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  %5 = alloca i32**, align 8
  store i32** %0, i32*** %4, align 8
  store i32** %1, i32*** %5, align 8
  %6 = load i32**, i32*** %4, align 8
  %7 = call i32 @assert(i32** %6)
  %8 = load i32**, i32*** %5, align 8
  %9 = call i32 @assert(i32** %8)
  %10 = load i32**, i32*** %4, align 8
  %11 = call %struct.TYPE_2__* @UNIT_VTABLE(i32** %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (i32**, i32**)*, i32 (i32**, i32**)** %12, align 8
  %14 = icmp ne i32 (i32**, i32**)* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %2
  %16 = load i32**, i32*** %4, align 8
  %17 = call %struct.TYPE_2__* @UNIT_VTABLE(i32** %16)
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32 (i32**, i32**)*, i32 (i32**, i32**)** %18, align 8
  %20 = load i32**, i32*** %4, align 8
  %21 = load i32**, i32*** %5, align 8
  %22 = call i32 %19(i32** %20, i32** %21)
  store i32 %22, i32* %3, align 4
  br label %25

23:                                               ; preds = %2
  %24 = load i32**, i32*** %5, align 8
  store i32* null, i32** %24, align 8
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %23, %15
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @assert(i32**) #1

declare dso_local %struct.TYPE_2__* @UNIT_VTABLE(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
